--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.9"
 Flask = "^2.1.2"
 Flask-SQLAlchemy = "^2.5.1"
 PyMySQL = "^1.0.2"
+gunicorn = "^20.1.0"
 
 [tool.poetry.dev-dependencies]
 
