--- a/benchmarks/pyproject.toml
+++ b/benchmarks/pyproject.toml
@@ -1,17 +1,12 @@
 [tool.poetry]
-name = "backend"
+name = "benchmarks"
 version = "0.1.0"
 description = ""
 authors = ["suhavni <suhavni@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
-Flask = "^2.1.2"
-Flask-SQLAlchemy = "^2.5.1"
-PyMySQL = "^1.0.2"
-gunicorn = "^20.1.0"
-redis = "^4.3.1"
-Flask-Caching = "^1.10.1"
+locust = "^2.9.0"
 
 [tool.poetry.dev-dependencies]
 
