--- a/k8s/redis-svc.yml
+++ b/k8s/redis-svc.yml
@@ -1,13 +1,13 @@
-# apiVersion: v1
-# kind: Service
-# metadata:
-#   labels:
-#     app: redis
-#   name: redis
-# spec:
-#   ports:
-#   - name: redis
-#     port: 6379
-#     targetPort: redisport
-#   selector:
-#     app: redis
+apiVersion: v1
+kind: Service
+metadata:
+  labels:
+    app: redis
+  name: redis
+spec:
+  ports:
+  - name: redis
+    port: 6379
+    targetPort: redisport
+  selector:
+    app: redis
